turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: missing arguments for constructor Array in class Array
var T = new Array[Array[Int]] = Array(Array(1,2,0,1,2,1), Array(0,1,0,0,1,1))
        ^Turmite:19: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
U(0)=(1,0);(2,1);(0,0)
     ^Turmite:20: error: type mismatch;
 found   : (Int, Int)
 required: Array[Int]
U(1)=(1,0);(2,1);(1,1)
     ^Turmite:65: error: not found: value x
  state = rule(state)(x)(2) 
                      ^Turmite:69: error: not found: value init
		init();
                ^Turmite:96: error: ambiguous reference to overloaded definition,
both method step in class Turmite of type (colors: Array[java.awt.Color])Unit
and  method step in class Turmite of type (colors: Array[java.awt.Color])Unit
match argument types (Array[java.awt.Color])
			step(colors);
                        ^Turmite:55: error: method step is defined twice
  conflicting symbols both originated in file 'plm.runtime195.Turmite'
def step(colors:Array[Color] ) {
    ^